# ironstar

./: .envrc  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .sops.yaml  CLAUDE.md  Cargo.toml  Makefile  authn-authz-integration-prompt.md  biome.json  buildbot-nix.toml  bun.nix  bunfig.toml  clippy.toml  flake.nix  ironstar-deps.html  justfile  kte4ankilkdis1qeldf9sn0aacdatana.darc  manifest  package.json  playwright.config.ts  process-compose.yaml  reconcile-issue-graph.sh  rust-toolchain.toml
crates/ironstar/: Cargo.toml  README.md  crate.nix
crates/ironstar-analytics/: Cargo.toml  README.md
crates/ironstar-analytics-infra/: Cargo.toml  README.md
crates/ironstar-analytics-infra/src/: analytics.rs  analytics_cache.rs  cache_invalidation.rs  cached_analytics.rs  embedded_catalogs.rs  error.rs  lib.rs
crates/ironstar-analytics/src/: combined.rs  lib.rs  values.rs  workflow.rs
crates/ironstar-analytics/src/catalog/: commands.rs  decider.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar-analytics/src/query_session/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs
crates/ironstar-analytics/src/views/: catalog.rs  mod.rs  query_session.rs
crates/ironstar-core/: Cargo.toml  README.md
crates/ironstar-core/src/: error.rs  error_code.rs  lib.rs  traits.rs  values.rs
crates/ironstar-event-bus/: Cargo.toml  README.md
crates/ironstar-event-bus/src/: cache_dependency.rs  error.rs  event_bus.rs  lib.rs  workspace.rs
crates/ironstar-event-store/: Cargo.toml  README.md
crates/ironstar-event-store/src/: error.rs  event_store.rs  lib.rs  sse_stream.rs
crates/ironstar-session/: Cargo.toml  README.md
crates/ironstar-session-store/: Cargo.toml  README.md
crates/ironstar-session-store/src/: error.rs  lib.rs  session_store.rs
crates/ironstar-session/src/: commands.rs  decider.rs  events.rs  lib.rs  state.rs  values.rs
crates/ironstar-shared-kernel/: Cargo.toml  README.md
crates/ironstar-shared-kernel/src/: lib.rs
crates/ironstar-todo/: Cargo.toml  README.md
crates/ironstar-todo/src/: commands.rs  decider.rs  events.rs  lib.rs  state.rs  values.rs  view.rs
crates/ironstar-workspace/: Cargo.toml  README.md
crates/ironstar-workspace/src/: lib.rs
crates/ironstar-workspace/src/dashboard/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar-workspace/src/saved_query/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar-workspace/src/user_preferences/: commands.rs  decider.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar-workspace/src/views/: mod.rs  workspace.rs
crates/ironstar-workspace/src/workspace/: commands.rs  decider.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar-workspace/src/workspace_preferences/: commands.rs  decider.rs  events.rs  state.rs  values.rs
crates/ironstar/bindings/commands/: TodoCommand.ts
crates/ironstar/bindings/domain/: TodoId.ts  TodoText.ts
crates/ironstar/bindings/events/: TodoEvent.ts
crates/ironstar/migrations/: 001_events.sql  002_sessions.sql
crates/ironstar/src/: config.rs  lib.rs  main.rs  state.rs
crates/ironstar/src/application/: error.rs  mod.rs
crates/ironstar/src/application/catalog/: handlers.rs  mod.rs  queries.rs
crates/ironstar/src/application/dashboard/: handlers.rs  mod.rs
crates/ironstar/src/application/query_session/: handlers.rs  mod.rs  queries.rs  spawn.rs
crates/ironstar/src/application/saved_query/: handlers.rs  mod.rs
crates/ironstar/src/application/todo/: handlers.rs  mod.rs  queries.rs
crates/ironstar/src/application/user_preferences/: handlers.rs  mod.rs
crates/ironstar/src/application/workspace/: handlers.rs  mod.rs  queries.rs
crates/ironstar/src/application/workspace_preferences/: handlers.rs  mod.rs
crates/ironstar/src/common/: error_code.rs  mod.rs
crates/ironstar/src/domain/: aggregate.rs  analytics.rs  error.rs  mod.rs  query_session.rs  signals.rs  todo.rs  traits.rs  values.rs
crates/ironstar/src/domain/analytics/: combined.rs  errors.rs  mod.rs  values.rs  workflow.rs
crates/ironstar/src/domain/catalog/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar/src/domain/common/: mod.rs  values.rs
crates/ironstar/src/domain/dashboard/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar/src/domain/query_session/: aggregate.rs  commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs
crates/ironstar/src/domain/saved_query/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar/src/domain/session/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar/src/domain/todo/: aggregate.rs  commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar/src/domain/user_preferences/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar/src/domain/views/: catalog.rs  mod.rs  query_session.rs  todo.rs  workspace.rs
crates/ironstar/src/domain/workspace/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs  values.rs
crates/ironstar/src/domain/workspace_preferences/: commands.rs  decider.rs  errors.rs  events.rs  mod.rs  state.rs
crates/ironstar/src/infrastructure/: analytics.rs  analytics_cache.rs  assets.rs  cache_dependency.rs  cache_invalidation.rs  cached_analytics.rs  embedded_catalogs.rs  error.rs  event_bus.rs  event_store.rs  key_expr.rs  metrics.rs  mod.rs  session_store.rs  sse_stream.rs
crates/ironstar/src/infrastructure/event_bus/: mod.rs  workspace.rs
crates/ironstar/src/presentation/: analytics.rs  bar_chart_transformer.rs  chart.rs  chart_templates.rs  chart_transformer.rs  components.rs  datastar_bridge.rs  error.rs  extractors.rs  health.rs  hotreload.rs  layout.rs  metrics.rs  middleware.rs  mod.rs  todo.rs  todo_templates.rs  workspace.rs
crates/ironstar/tests/: chart_integration.rs  duckdb_integration.rs  layout_integration.rs  todo_feed.rs
(+262 files in other folders)
