[workspace]
resolver = "2"
members = ["crates/ironstar"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Web framework and async runtime
axum = { version = "0.8", features = ["default"] }
tokio = { version = "1.48", features = ["full"] }
hypertext = { version = "0.12" }

# Datastar SSE integration
datastar = { version = "0.3", features = ["axum"] }

# Database and persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }
redb = { version = "3.1" }
duckdb = { version = "1.4.3", features = ["bundled", "parquet", "json", "chrono"] }

# TypeScript type generation
ts-rs = { version = "11.1", features = ["serde-compat", "uuid-impl"] }

# Asset embedding
rust-embed = { version = "8", features = ["include-exclude"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Error handling
thiserror = { version = "2.0" }

# Logging/tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Common utilities
uuid = { version = "1.19", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Analytics caching (from architecture-decisions.md)
moka = { version = "0.12", features = ["future"] }
rkyv = { version = "0.8", features = ["bytecheck"] }

# Workspace-wide lints (adapted from Hyperswitch)
# Per-crate Cargo.toml should include: [lints] workspace = true
[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_qualifications = "warn"

[workspace.lints.clippy]
# Panic prevention - enforce explicit error handling
panic = "warn"
panic_in_result_fn = "warn"
unwrap_used = "warn"
expect_used = "warn"
unwrap_in_result = "warn"
todo = "warn"
unimplemented = "warn"

# Code quality
as_conversions = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
use_self = "warn"

# Safety
indexing_slicing = "warn"
large_futures = "warn"

# Debugging artifacts
print_stdout = "warn"
print_stderr = "warn"

[profile.release]
strip = true
opt-level = "z"
lto = true
