[workspace]
resolver = "2"
members = ["crates/ironstar"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Web framework and async runtime
axum = { version = "0.8", features = ["default", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1.48", features = ["full", "test-util"] }
hypertext = { version = "0.12" }

# Datastar SSE integration
datastar = { version = "0.3.1", features = ["axum"] }

# Database and persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }
redb = { version = "3.1" }
async-duckdb = { version = "0.3", features = ["bundled", "parquet", "json", "chrono", "uuid"] }

# TypeScript type generation
# no-serde-warnings: suppress warnings for serde attrs ts-rs doesn't parse (transparent, try_from, into)
ts-rs = { version = "11.1", features = ["serde-compat", "uuid-impl", "chrono-impl", "no-serde-warnings"] }

# Asset embedding
rust-embed = { version = "8", features = ["include-exclude", "interpolate-folder-path"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Error handling
thiserror = { version = "2.0" }

# Logging/tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Common utilities
uuid = { version = "1.19", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Session ID generation
rand = { version = "0.9", features = ["std_rng"] }
base64 = "0.22"

# Analytics caching (from architecture-decisions.md)
moka = { version = "0.12", features = ["future"] }
rkyv = { version = "0.8", features = ["bytecheck"] }

# Event bus (distribution-ready pub/sub)
zenoh = { version = "1.7", default-features = false, features = ["transport_tcp", "transport_tls"] }

# Functional event sourcing (Decider pattern)
# Default features require Send bounds, enabling axum multi-threaded handler compatibility
fmodel-rust = { version = "0.9" }

# Async stream utilities
futures = { version = "0.3" }
tokio-stream = { version = "0.1", features = ["time"] }

# Testing utilities
tower = { version = "0.5" }

# HTTP utilities for static file serving
tower-http = { version = "0.6", features = ["fs"] }
mime_guess = "2"
http = "1"

# Workspace-wide lints (adapted from Hyperswitch)
# Per-crate Cargo.toml should include: [lints] workspace = true
[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_qualifications = "warn"

[workspace.lints.clippy]
# Panic prevention - enforce explicit error handling
panic = "warn"
panic_in_result_fn = "warn"
unwrap_used = "warn"
expect_used = "warn"
unwrap_in_result = "warn"
todo = "warn"
unimplemented = "warn"

# Code quality
as_conversions = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
use_self = "warn"

# Safety
indexing_slicing = "warn"
large_futures = "warn"

# Debugging artifacts
print_stdout = "warn"
print_stderr = "warn"

[profile.release]
strip = true
opt-level = "z"
lto = true
