[package]
name = "ironstar-analytics"
version.workspace = true
edition.workspace = true
description = "Analytics domain: Catalog aggregate, QuerySession aggregate, Chart values, combined decider"
license.workspace = true

[lib]
doctest = false

[dependencies]
ironstar-core = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
