[package]
name = "ironstar-event-store"
version.workspace = true
edition.workspace = true
description = "SQLite event repository and SSE stream composition for event-sourced aggregates"
license.workspace = true

[lib]
doctest = false

[dependencies]
ironstar-core = { workspace = true }
axum = { workspace = true }
fmodel-rust = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zenoh = { workspace = true }

[lints]
workspace = true
