[package]
name = "ironstar-shared-kernel"
version.workspace = true
edition.workspace = true
description = "Shared kernel types: UserId, OAuthProvider"
license.workspace = true

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
ts-rs = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
