[package]
name = "ironstar"
version.workspace = true
edition.workspace = true
description = "Rust + Datastar template for reactive, event-sourced hypermedia applications"
license.workspace = true

[[bin]]
name = "ironstar"
path = "src/main.rs"

[lib]
name = "ironstar"
path = "src/lib.rs"
doctest = false

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
hypertext = { workspace = true }
datastar = { workspace = true }
sqlx = { workspace = true }
redb = { workspace = true }
async-duckdb = { workspace = true }
ts-rs = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Analytics caching
moka = { workspace = true }
rkyv = { workspace = true }

# Event bus
zenoh = { workspace = true }

# Functional event sourcing (Decider pattern)
fmodel-rust = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
